src/test/ui/generic-associated-types/gat-dont-ice-on-absent-feature.stderr
error[E0658]: generic associated types are unstable
  --> $DIR/gat-dont-ice-on-absent-feature.rs:7:5
   |
LL |     type Item<'b> = &'b Foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error[E0195]: lifetime parameters or bounds on type `Item` do not match the trait declaration
  --> $DIR/gat-dont-ice-on-absent-feature.rs:7:14
   |
LL |     type Item<'b> = &'b Foo;
   |              ^^^^ lifetimes do not match type in trait

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0195, E0658.
For more information about an error, try `rustc --explain E0195`.
